<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <au.edu.sydney.uni.fogcomputingclient.AutoFitTextureView
            android:id="@+id/texture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <au.edu.sydney.uni.fogcomputingclient.DetectionView
            android:id="@+id/detection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/control_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/native_mode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/native_mode"
            android:textSize="30px" />

        <Button
            android:id="@+id/local_mode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/local_mode"
            android:textSize="30px" />

        <Button
            android:id="@+id/fog_basic"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/fog_basic"
            android:textSize="26px" />

        <Button
            android:id="@+id/fog_dnn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/fog_dnn"
            android:textSize="26px" />

        <Button
            android:id="@+id/fog_cloud"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/fog_cloud"
            android:textSize="26px" />

        <Button
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/reset"
            android:textSize="26px" />

        <!--<ImageButton-->
            <!--android:id="@+id/info"-->
            <!--style="@android:style/Widget.Material.Light.Button.Borderless"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_weight="1"-->
            <!--android:contentDescription="@string/description_info"-->
            <!--android:src="@drawable/ic_action_info"-->
            <!--android:textSize="30px" />-->

    </LinearLayout>

</RelativeLayout>